Font family changed after facing issues on small devices

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Didact+Gothic');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,400');
 
 body {
-  font-family: 'Didact Gothic', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   height: 100vh;
   background: #333 url('image.jpg') no-repeat center center / cover;
   color: #333;
